--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,11 @@
       content="Scavezzoni Méloé - Développeuse Web Frontend"
     />
     <meta property="og:description" content="Site CV - Portfolio" />
-    <meta property="og:image" content="./assets/images/image-logo.png" />
+    <meta
+      property="og:image"
+      content="https://unruffled-panini-66f35a.netlify.app/assets/images/image-logo.png"
+    />
+    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
@@ -61,7 +65,10 @@
       content="Scavezzoni Méloé - Développeuse Web Frontend"
     />
     <meta property="twitter:description" content="Site CV - Portfolio" />
-    <meta property="twitter:image" content="./assets/images/image-logo.png" />
+    <meta
+      property="twitter:image"
+      content="https://unruffled-panini-66f35a.netlify.app/assets/images/image-logo.png"
+    />
   </head>
 
   <body>
@@ -92,6 +99,7 @@
           </a>
         </div>
       </div>
+
       <div class="scroll-down-button">
         <svg>
           <use href="./assets/icons/sprite.svg#down-arrow"></use>
@@ -524,7 +532,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img src="./assets/images/portfolio/pomodoro.jpeg" alt="Pomodoro" />
             <a href="https://pomodoro-ms.netlify.app/" class="link-img">
               <span class="title-img">Pomodoro</span>
@@ -535,7 +543,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img src="./assets/images/portfolio/ghjpsy.jpeg" alt="Ghjpsy" />
             <a href="https://www.ghjpsy.org/" class="link-img">
               <span class="title-img">Ghjpsy</span>
@@ -546,7 +554,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img src="./assets/images/portfolio/coach2.jpeg" alt="Coach2" />
             <a href="https://www.coach2.be/" class="link-img">
               <span class="title-img">Coach2</span>
@@ -557,7 +565,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/bureau-andre.jpeg"
               alt="Bureau Andre"
@@ -571,7 +579,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/gregor-potter.jpeg"
               alt="Gregor Potter"
@@ -585,7 +593,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/climactes.jpg"
               alt="Climactes"
@@ -599,7 +607,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/achille-et-margaux.jpg"
               alt="Achille et Margaux"
@@ -613,7 +621,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/ferretland.jpeg"
               alt="Ferretland"
@@ -626,7 +634,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/trouvkach.jpg"
               alt="Trouvkach"
@@ -639,7 +647,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/tic-tac-toe.jpeg"
               alt="Tic Tac Toe"
@@ -653,7 +661,7 @@
             </a>
           </div>
 
-          <div class="block-img">
+          <div class="block-img grid-item">
             <img
               src="./assets/images/portfolio/casse-briques.jpg"
               alt="Casse briques"
