--- a/src/index.html
+++ b/src/index.html
@@ -4,37 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/favicon.ico" />
-    <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
-    <link
-      rel="preload"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-      href="./assets/fonts/Montserrat-Regular.ttf"
-    />
-    <link
-      rel="preload"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-      href="./assets/fonts/Montserrat-Italic.ttf"
-    />
-    <link
-      rel="preload"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-      href="./assets/fonts/Montserrat-SemiBold.ttf"
-    />
-    <link
-      rel="preload"
-      as="font"
-      type="font/ttf"
-      crossorigin="anonymous"
-      href="./assets/fonts/Montserrat-ExtraBold.ttf"
-    />
-    <link rel="stylesheet" href="./scss/style.scss" />
     <!-- Primary Meta Tags -->
     <title>Scavezzoni Méloé - Développeuse Web Frontend</title>
     <meta name="title" content="Scavezzoni Méloé - Développeuse Web Frontend" />
@@ -69,6 +38,38 @@
       property="twitter:image"
       content="https://unruffled-panini-66f35a.netlify.app/assets/images/image-logo.png"
     />
+    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+      href="./assets/fonts/Montserrat-Regular.ttf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+      href="./assets/fonts/Montserrat-Italic.ttf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+      href="./assets/fonts/Montserrat-SemiBold.ttf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+      href="./assets/fonts/Montserrat-ExtraBold.ttf"
+    />
+
+    <link rel="stylesheet" href="./scss/style.scss" />
   </head>
 
   <body>
@@ -702,6 +703,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
