Changed OG image url

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,7 @@
       content="Scavezzoni Méloé - Développeuse Web Frontend"
     />
     <meta property="og:description" content="Site CV - Portfolio" />
-    <meta
-      property="og:image"
-      content="https://unruffled-panini-66f35a.netlify.app/assets/images/image-logo.png"
-    />
+    <meta property="og:image" content="./assets/images/og-image.jpeg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -34,10 +31,7 @@
       content="Scavezzoni Méloé - Développeuse Web Frontend"
     />
     <meta property="twitter:description" content="Site CV - Portfolio" />
-    <meta
-      property="twitter:image"
-      content="https://unruffled-panini-66f35a.netlify.app/assets/images/image-logo.png"
-    />
+    <meta property="twitter:image" content="./assets/images/og-image.jpeg" />
     <link rel="icon" href="./assets/favicon.ico" />
     <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
     <link
