Split text for animation

--- a/src/index.html
+++ b/src/index.html
@@ -75,21 +75,34 @@
             <use href="./assets/icons/sprite.svg#logo2"></use>
           </svg>
         </div>
-        <h1>
-          <span>Autodidacte</span>, <span>curieuse</span> et
-          <span>motivée</span>, j’ai envie d’apprendre des nouvelles choses et
-          de perfectionner mes connaissances.
+        <h1 class="banner-text">
+          <span class="anim">
+            <span class="text-primary">Autodidacte</span>,
+          </span>
+          <span class="text-primary anim">curieuse</span>
+          <span class="anim"> et</span>
+          <span class="anim"> <span class="text-primary">motivée</span>, </span>
+          <span class="anim"> j’ai envie d’apprendre </span>
+          <span class="anim">des nouvelles choses</span>
+          <span class="anim">et de perfectionner </span>
+          <span class="anim">mes connaissances.</span>
         </h1>
 
         <div class="icons">
           <a href="https://www.linkedin.com/in/meloe-scavezzoni/">
             <svg>
-              <use href="./assets/icons/sprite.svg#linkedin"></use>
+              <use
+                class="icon-anim"
+                href="./assets/icons/sprite.svg#linkedin"
+              ></use>
             </svg>
           </a>
           <a href="https://github.com/MeloScav">
             <svg>
-              <use href="./assets/icons/sprite.svg#github"></use>
+              <use
+                class="icon-anim"
+                href="./assets/icons/sprite.svg#github"
+              ></use>
             </svg>
           </a>
         </div>
