Split text for animation

--- a/src/index.html
+++ b/src/index.html
@@ -82,10 +82,12 @@
           <span class="text-primary anim">curieuse</span>
           <span class="anim"> et</span>
           <span class="anim"> <span class="text-primary">motivée</span>, </span>
-          <span class="anim"> j’ai envie d’apprendre </span>
-          <span class="anim">des nouvelles choses</span>
-          <span class="anim">et de perfectionner </span>
-          <span class="anim">mes connaissances.</span>
+          <span class="anim"> j’ai</span>
+          <span class="anim"> d’apprendre </span> <span class="anim">des</span>
+          <span class="anim">nouvelles choses</span>
+          <span class="anim">et</span>
+          <span class="anim">de perfectionner </span>
+          <span class="anim">mes</span> <span class="anim">connaissances.</span>
         </h1>
 
         <div class="icons">
