Change logo svg to logo png

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,7 @@
   <div class="header-banner">
     <div class="intro-container">
       <div class="logo-container">
-        <svg>
-          <use href="./assets/icons/sprite.svg#logo2"></use>
-        </svg>
+        <img src="./assets/Logo.png" alt="Logo Scavezzoni Méloé">
       </div>
       <h1 class="banner-text">
         <span class="anim">
