--- a/src/index.html
+++ b/src/index.html
@@ -375,6 +375,28 @@
           <div class="row justify-content-md-center">
             <div class="col-7 col-md-5">
               <p class="xp-title text-align-right">
+                <span class="name">Les animations au Scroll en 9 projets</span>
+                <span class="establishment">Udemy</span>
+                <span class="city">Liège</span>
+              </p>
+            </div>
+            <div class="d-none d-md-block col-md-auto">
+              <div class="separation">
+                <div class="line"></div>
+                <div class="circle"></div>
+                <div class="line"></div>
+              </div>
+            </div>
+            <div class="col-5 col-md-3">
+              <p>Mai 2021</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="padding-content">
+          <div class="row justify-content-md-center">
+            <div class="col-7 col-md-5">
+              <p class="xp-title text-align-right">
                 <span class="name">Devenir Web Designer</span>
                 <span class="establishment">Udemy</span>
                 <span class="city">Liège</span>
