--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,15 @@
   <meta property="twitter:title" content="Scavezzoni Méloé - Développeuse Web Frontend" />
   <meta property="twitter:description" content="Site CV - Portfolio" />
   <meta property="twitter:image" content="./assets/images/og-image.jpeg" />
-  <link rel="icon" href="./assets/favicon.ico" />
-  <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" />
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+  <link rel="manifest" href="./assets/site.webmanifest">
+  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- Font -->
   <link rel="preload" as="font" type="font/ttf" crossorigin="anonymous" href="./assets/fonts/Montserrat-Regular.ttf" />
   <link rel="preload" as="font" type="font/ttf" crossorigin="anonymous" href="./assets/fonts/Montserrat-Italic.ttf" />
   <link rel="preload" as="font" type="font/ttf" crossorigin="anonymous" href="./assets/fonts/Montserrat-SemiBold.ttf" />
@@ -245,7 +252,7 @@
           </div>
         </div>
 
-        <div class="padding-content">
+        <div class="padding-content-end">
           <div class="row justify-content-md-center">
             <div class="col-5 col-md-3">
               <p class="text-align-right">Mai 2019 - mars 2020</p>
@@ -274,96 +281,6 @@
           </div>
         </div>
 
-        <div class="padding-content">
-          <div class="row justify-content-md-center">
-            <div class="col-5 col-md-3">
-              <p class="text-align-right">Décembre 2018</p>
-            </div>
-            <div class="d-none d-md-block col-md-auto">
-              <div class="separation">
-                <div class="line"></div>
-                <div class="circle"></div>
-                <div class="line"></div>
-              </div>
-            </div>
-            <div class="col-7 col-md-5">
-              <p class="xp-title">
-                <span class="name">Caissier / Réassortisseur</span>
-                <span class="establishment">Primark</span>
-                <span class="city">Liège</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="padding-content">
-          <div class="row justify-content-md-center">
-            <div class="col-5 col-md-3">
-              <p class="text-align-right">Juin 2017</p>
-            </div>
-            <div class="d-none d-md-block col-md-auto">
-              <div class="separation">
-                <div class="line"></div>
-                <div class="circle"></div>
-                <div class="line"></div>
-              </div>
-            </div>
-            <div class="col-7 col-md-5">
-              <p class="xp-title">
-                <span class="name">Assistante Vétérinaire</span>
-                <span class="establishment">Centre Vétérinaire Triovet</span>
-                <span class="city">Liège</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="padding-content">
-          <div class="row justify-content-md-center">
-            <div class="col-5 col-md-3">
-              <p class="text-align-right">Décembre 2016</p>
-            </div>
-            <div class="d-none d-md-block col-md-auto">
-              <div class="separation">
-                <div class="line"></div>
-                <div class="circle"></div>
-                <div class="line"></div>
-              </div>
-            </div>
-            <div class="col-7 col-md-5">
-              <p class="xp-title">
-                <span class="name">Assistante Vétérinaire</span>
-                <span class="establishment">Cabinet Vétérinaire - Dr Catherine Bande</span>
-                <span class="city">Beaufays</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="padding-content-end">
-          <div class="row justify-content-md-center">
-            <div class="col-5 col-md-3">
-              <p class="text-align-right">2013</p>
-            </div>
-            <div class="d-none d-md-block col-md-auto">
-              <div class="separation">
-                <div class="line"></div>
-                <div class="circle"></div>
-                <div class="line"></div>
-              </div>
-            </div>
-            <div class="col-7 col-md-5">
-              <p class="xp-title">
-                <span class="name">Agent d'accueil</span>
-                <span class="establishment">Carrefour</span>
-                <span class="city">Fléron</span>
-              </p>
-              <div class="xp-description">
-                <p>Job étudiant</p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
 
