Modification of tags and description of images

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 
 <body>
   <!-- HEADER -->
-  <div class="header-banner">
+  <header class="header-banner">
     <div class="intro-container">
       <div class="logo-container">
         <img src="./assets/Logo.png" alt="Logo Scavezzoni Méloé">
@@ -83,17 +83,17 @@
     <div class="banner-image-container">
       <div class="banner-image"></div>
     </div>
-  </div>
+  </header>
 
   <!-- CV -->
-  <div class="cv-container">
+  <section class="cv-container">
     <h2 class="title">
       <span>Curriculum vitae</span>
     </h2>
     <div class="circles circle-small rellax" data-rellax-speed="3"></div>
 
     <!-- SKILLS -->
-    <div class="bg-secondary">
+    <section class="bg-secondary">
       <h3 class="title-h3">Compétences</h3>
       <div class="container knowledge">
         <div class="good-knowledge">
@@ -192,10 +192,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- PROFESSIONAL EXPERIENCES -->
-    <div class="xp-container">
+    <section class="xp-container">
       <div class="circles circle-middle rellax" data-rellax-speed="2"></div>
       <div class="circles circle-tall rellax" data-rellax-speed="3"></div>
       <h3 class="title-h3">Expériences professionnelle</h3>
@@ -282,10 +282,10 @@
         </div>
 
       </div>
-    </div>
+    </section>
 
     <!-- DIPLOMAS AND QUALIFICATIONS -->
-    <div class="bg-secondary">
+    <section class="bg-secondary">
       <h3 class="title-h3">Diplômes et formations</h3>
       <div class="container">
         <div class="padding-content">
@@ -398,151 +398,152 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </section>
+  </section>
 
   <!-- PORTFOLIO -->
   <div class="container-portfolio-footer">
     <div class="circles circle-tall rellax" data-rellax-speed="1"></div>
     <div class="circles circle-small rellax" data-rellax-speed="3"></div>
     <div class="circles circle-middle rellax" data-rellax-speed="2"></div>
-    <h2 class="title">
-      <span>Portfolio</span>
-    </h2>
-    <div class="container">
-      <div class="portfolio">
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/web-site.jpeg" alt="My old web site" />
-          <a href="https://meloescavezzoni.netlify.app/" class="link-img">
-            <span class="title-img">Mon ancien site</span>
-          </a>
-        </div>
+    <section>
+      <h2 class="title">
+        <span>Portfolio</span>
+      </h2>
+      <div class="container">
+        <div class="portfolio">
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/web-site.jpeg" alt="Lien vers mon ancien site web" />
+            <a href="https://meloescavezzoni.netlify.app/" class="link-img">
+              <span class="title-img">Mon ancien site</span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/bookshelf.jpeg" alt="Bookshelf" />
-          <a href="https://bookshelf-ms.netlify.app/auth/signup" class="link-img">
-            <span class="title-img">Bookshelf</span>
-            <span class="description-img">
-              Une application créée avec Angular et Firebase.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/bookshelf.jpeg" alt="Lien vers le site Bookshelf" />
+            <a href="https://bookshelf-ms.netlify.app/auth/signup" class="link-img">
+              <span class="title-img">Bookshelf</span>
+              <span class="description-img">
+                Une application créée avec Angular et Firebase.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/pomodoro.jpeg" alt="Pomodoro" />
-          <a href="https://pomodoro-ms.netlify.app/" class="link-img">
-            <span class="title-img">Pomodoro</span>
-            <span class="description-img">
-              Réalisé avec REACT, il permet de gérer le temps de travail et de
-              pause.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/pomodoro.jpeg" alt="Lien vers le site Pomodoro" />
+            <a href="https://pomodoro-ms.netlify.app/" class="link-img">
+              <span class="title-img">Pomodoro</span>
+              <span class="description-img">
+                Réalisé avec REACT, il permet de gérer le temps de travail et de
+                pause.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/ghjpsy.jpeg" alt="Ghjpsy" />
-          <a href="https://www.ghjpsy.org/" class="link-img">
-            <span class="title-img">Ghjpsy</span>
-            <span class="description-img">
-              Participation au développement d'un site internet pour un groupe
-              d'hôpitaux psychiatriques de jour.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/ghjpsy.jpeg" alt="Lien vers le site Ghjpsy" />
+            <a href="https://www.ghjpsy.org/" class="link-img">
+              <span class="title-img">Ghjpsy</span>
+              <span class="description-img">
+                Participation au développement d'un site internet pour un groupe
+                d'hôpitaux psychiatriques de jour.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/coach2.jpeg" alt="Coach2" />
-          <a href="https://www.coach2.be/" class="link-img">
-            <span class="title-img">Coach2</span>
-            <span class="description-img">
-              Participation au développement d'un site internet pour "Coach2,
-              Business & Human development".
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/coach2.jpeg" alt="Lien vers le site Coach2" />
+            <a href="https://www.coach2.be/" class="link-img">
+              <span class="title-img">Coach2</span>
+              <span class="description-img">
+                Participation au développement d'un site internet pour "Coach2,
+                Business & Human development".
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/bureau-andre.jpeg" alt="Bureau Andre" />
-          <a href="https://www.bureau-andre.be/" class="link-img">
-            <span class="title-img">Bureau Andre</span>
-            <span class="description-img">
-              Participation au développement d'un site pour le bureau d'études
-              et d'expertises André.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/bureau-andre.jpeg" alt="Lien vers Bureau Andre" />
+            <a href="https://www.bureau-andre.be/" class="link-img">
+              <span class="title-img">Bureau Andre</span>
+              <span class="description-img">
+                Participation au développement d'un site pour le bureau d'études
+                et d'expertises André.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/gregor-potter.jpeg" alt="Gregor Potter" />
-          <a href="https://www.gregorpotter.com/" class="link-img">
-            <span class="title-img">Gregor Potter</span>
-            <span class="description-img">
-              Participation au développement d'un site internet pour un DJ
-              Belge.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/gregor-potter.jpeg" alt="Lien vers le site Gregor Potter" />
+            <a href="https://www.gregorpotter.com/" class="link-img">
+              <span class="title-img">Gregor Potter</span>
+              <span class="description-img">
+                Participation au développement d'un site internet pour un DJ
+                Belge.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/climactes.jpg" alt="Climactes" />
-          <a href="https://www.climactes.org/" class="link-img">
-            <span class="title-img">Climactes</span>
-            <span class="description-img">
-              Participation au développement d'un site internet pour une
-              université d'été qui veut agir pour le climat.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/climactes.jpg" alt="Lien vers le site Climactes" />
+            <a href="https://www.climactes.org/" class="link-img">
+              <span class="title-img">Climactes</span>
+              <span class="description-img">
+                Participation au développement d'un site internet pour une
+                université d'été qui veut agir pour le climat.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/achille-et-margaux.jpg" alt="Achille et Margaux" />
-          <a href="https://www.achillemargaux.be/" class="link-img">
-            <span class="title-img">Achille et Margaux</span>
-            <span class="description-img">
-              Participation au développement d'un site internet pour une
-              agence immobilière.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/achille-et-margaux.jpg" alt="Lien vers le site Achille et Margaux" />
+            <a href="https://www.achillemargaux.be/" class="link-img">
+              <span class="title-img">Achille et Margaux</span>
+              <span class="description-img">
+                Participation au développement d'un site internet pour une
+                agence immobilière.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/ferretland.jpeg" alt="Ferretland" />
-          <a href="https://ferretland-ms.netlify.app/" class="link-img">
-            <span class="title-img">Ferretland</span>
-            <span class="description-img">
-              Un test pour un site de toilettage.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/ferretland.jpeg" alt="Lien vers le site d'exemple Ferretland" />
+            <a href="https://ferretland-ms.netlify.app/" class="link-img">
+              <span class="title-img">Ferretland</span>
+              <span class="description-img">
+                Un test pour un site de toilettage.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/trouvkach.jpg" alt="Trouvkach" />
-          <a href="https://trouvkach-6.herokuapp.com/" class="link-img">
-            <span class="title-img">Trouvkach</span>
-            <span class="description-img">
-              Une application pour trouver une banque, réalisée en REACT.
-            </span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/trouvkach.jpg" alt="Lien vers le site Trouvkach" />
+            <a href="https://trouvkach-6.herokuapp.com/" class="link-img">
+              <span class="title-img">Trouvkach</span>
+              <span class="description-img">
+                Une application pour trouver une banque, réalisée en REACT.
+              </span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/tic-tac-toe.jpeg" alt="Tic Tac Toe" />
-          <a href="https://meloscav.github.io/Jeu-Tic-tac-toe-/" class="link-img">
-            <span class="title-img">Tic Tac Toe</span>
-            <span class="description-img">Petit jeu en CANVAS.</span>
-          </a>
-        </div>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/tic-tac-toe.jpeg" alt="Lien vers le site Tic Tac Toe" />
+            <a href="https://meloscav.github.io/Jeu-Tic-tac-toe-/" class="link-img">
+              <span class="title-img">Tic Tac Toe</span>
+              <span class="description-img">Petit jeu en CANVAS.</span>
+            </a>
+          </div>
 
-        <div class="block-img grid-item">
-          <img src="./assets/images/portfolio/casse-briques.jpg" alt="Casse briques" />
-          <a href="https://meloscav.github.io/Jeu-casse-briques/" class="link-img">
-            <span class="title-img">Casse briques</span>
-            <span class="description-img">Petit jeu en CANVAS.</span>
-          </a>
+          <div class="block-img grid-item">
+            <img src="./assets/images/portfolio/casse-briques.jpg" alt="Lien vers le site Casse briques" />
+            <a href="https://meloscav.github.io/Jeu-casse-briques/" class="link-img">
+              <span class="title-img">Casse briques</span>
+              <span class="description-img">Petit jeu en CANVAS.</span>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-
+    </section>
     <!-- FOOTER -->
     <div class="footer">
       <h4 class="title-footer"><span>Contact</span></h4>
