Added text for screen readers

--- a/src/index.html
+++ b/src/index.html
@@ -414,131 +414,144 @@
         <div class="portfolio">
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/web-site.jpeg" alt="Lien vers mon ancien site web" />
-            <a href="https://meloescavezzoni.netlify.app/" class="link-img">
+            <a href="https://meloescavezzoni.netlify.app/" class="link-img" target="_blank">
               <span class="title-img">Mon ancien site</span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/bookshelf.jpeg" alt="Lien vers le site Bookshelf" />
-            <a href="https://bookshelf-ms.netlify.app/auth/signup" class="link-img">
+            <a href="https://bookshelf-ms.netlify.app/auth/signup" class="link-img" target="_blank">
               <span class="title-img">Bookshelf</span>
               <span class="description-img">
                 Une application créée avec Angular et Firebase.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/pomodoro.jpeg" alt="Lien vers le site Pomodoro" />
-            <a href="https://pomodoro-ms.netlify.app/" class="link-img">
+            <a href="https://pomodoro-ms.netlify.app/" class="link-img" target="_blank">
               <span class="title-img">Pomodoro</span>
               <span class="description-img">
                 Réalisé avec REACT, il permet de gérer le temps de travail et de
                 pause.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/ghjpsy.jpeg" alt="Lien vers le site Ghjpsy" />
-            <a href="https://www.ghjpsy.org/" class="link-img">
+            <a href="https://www.ghjpsy.org/" class="link-img" target="_blank">
               <span class="title-img">Ghjpsy</span>
               <span class="description-img">
                 Participation au développement d'un site internet pour un groupe
                 d'hôpitaux psychiatriques de jour.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/coach2.jpeg" alt="Lien vers le site Coach2" />
-            <a href="https://www.coach2.be/" class="link-img">
+            <a href="https://www.coach2.be/" class="link-img" target="_blank">
               <span class="title-img">Coach2</span>
               <span class="description-img">
                 Participation au développement d'un site internet pour "Coach2,
                 Business & Human development".
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/bureau-andre.jpeg" alt="Lien vers Bureau Andre" />
-            <a href="https://www.bureau-andre.be/" class="link-img">
+            <a href="https://www.bureau-andre.be/" class="link-img" target="_blank">
               <span class="title-img">Bureau Andre</span>
               <span class="description-img">
                 Participation au développement d'un site pour le bureau d'études
                 et d'expertises André.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/gregor-potter.jpeg" alt="Lien vers le site Gregor Potter" />
-            <a href="https://www.gregorpotter.com/" class="link-img">
+            <a href="https://www.gregorpotter.com/" class="link-img" target="_blank">
               <span class="title-img">Gregor Potter</span>
               <span class="description-img">
                 Participation au développement d'un site internet pour un DJ
                 Belge.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/climactes.jpg" alt="Lien vers le site Climactes" />
-            <a href="https://www.climactes.org/" class="link-img">
+            <a href="https://www.climactes.org/" class="link-img" target="_blank">
               <span class="title-img">Climactes</span>
               <span class="description-img">
                 Participation au développement d'un site internet pour une
                 université d'été qui veut agir pour le climat.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/achille-et-margaux.jpg" alt="Lien vers le site Achille et Margaux" />
-            <a href="https://www.achillemargaux.be/" class="link-img">
+            <a href="https://www.achillemargaux.be/" class="link-img" target="_blank">
               <span class="title-img">Achille et Margaux</span>
               <span class="description-img">
                 Participation au développement d'un site internet pour une
                 agence immobilière.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/ferretland.jpeg" alt="Lien vers le site d'exemple Ferretland" />
-            <a href="https://ferretland-ms.netlify.app/" class="link-img">
+            <a href="https://ferretland-ms.netlify.app/" class="link-img" target="_blank">
               <span class="title-img">Ferretland</span>
               <span class="description-img">
                 Un test pour un site de toilettage.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/trouvkach.jpg" alt="Lien vers le site Trouvkach" />
-            <a href="https://trouvkach-6.herokuapp.com/" class="link-img">
+            <a href="https://trouvkach-6.herokuapp.com/" class="link-img" target="_blank">
               <span class="title-img">Trouvkach</span>
               <span class="description-img">
                 Une application pour trouver une banque, réalisée en REACT.
               </span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/tic-tac-toe.jpeg" alt="Lien vers le site Tic Tac Toe" />
-            <a href="https://meloscav.github.io/Jeu-Tic-tac-toe-/" class="link-img">
+            <a href="https://meloscav.github.io/Jeu-Tic-tac-toe-/" class="link-img" target="_blank">
               <span class="title-img">Tic Tac Toe</span>
               <span class="description-img">Petit jeu en CANVAS.</span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
 
           <div class="block-img grid-item">
             <img src="./assets/images/portfolio/casse-briques.jpg" alt="Lien vers le site Casse briques" />
-            <a href="https://meloscav.github.io/Jeu-casse-briques/" class="link-img">
+            <a href="https://meloscav.github.io/Jeu-casse-briques/" class="link-img" target="_blank">
               <span class="title-img">Casse briques</span>
               <span class="description-img">Petit jeu en CANVAS.</span>
+              <span class="sr-only">(Ouvre un nouvel onglet vers une nouvelle page)</span>
             </a>
           </div>
         </div>
