Text header color modification

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,11 @@
       </div>
       <h1 class="banner-text">
         <span class="anim">
-          <span class="text-primary">Autodidacte</span>,
+          <span class="text-header">Autodidacte</span>,
         </span>
-        <span class="text-primary anim">curieuse</span>
+        <span class="text-header anim">curieuse</span>
         <span class="anim"> et</span>
-        <span class="anim"> <span class="text-primary">motivée</span>, </span>
+        <span class="anim"> <span class="text-header">motivée</span>, </span>
         <span class="anim"> j’ai</span><span class="anim"> envie</span>
         <span class="anim"> d’apprendre </span> <span class="anim">des</span>
         <span class="anim">nouvelles choses</span>
